# lol-account-switcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
