[package]
name = "lol-switcher"
version = "0.1.0"
description = "LoL Account Switcher"
authors = ["Roger"]
edition = "2021"

[lib]
name = "lol_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri-plugin-dialog = "2"

